--- a/components/Message/styles.module.css
+++ b/components/Message/styles.module.css
@@ -28,7 +28,8 @@
   color: var(--black-color);
   align-self: flex-start;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 0.5rem;
   align-items: flex-start;
   margin-top: 0.25rem;
 }
