--- a/components/MessageList/styles.module.css
+++ b/components/MessageList/styles.module.css
@@ -11,6 +11,7 @@
   position: relative;
   overflow-y: auto;
   color: var(--black-color);
+  max-height: 500px;
 
   /* hide scrollbar */
   -ms-overflow-style: none; /* IE and Edge */
