--- a/app/testing/styles.module.css
+++ b/app/testing/styles.module.css
@@ -3,6 +3,14 @@
   min-height: 100vh;
   background: black;
   color: white;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
