--- a/components/MessageForm/styles.module.css
+++ b/components/MessageForm/styles.module.css
@@ -25,7 +25,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondary-color);
+  /* background-color: var(--secondary-color); */
   color: var(--black-color);
   text-align: center;
   border-radius: 0.5rem;
