Update message background colors and remove debug logging for phone number in ZohoProvider

--- a/components/Message/styles.module.css
+++ b/components/Message/styles.module.css
@@ -5,7 +5,15 @@
 }
 
 .red {
-  background-color: '#ab192d';
+  background-color: #ab192d;
+}
+
+.purple {
+  background-color: #7c3aed;
+}
+
+.grey {
+  background-color: #6b7280;
 }
 
 .container {
